--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -110,32 +110,32 @@
     "message": "Unidirectional data flow erlaubt uns alle Änderungen ihrer Applikation zu loggen und time travel debugging einzusetzen."
   },
   {
-    "id": "boilerplate.containers.HomePage.features.Button",
+    "id": "boilerplate.containers.Dashboard.features.Button",
     "defaultMessage": "Features",
     "message": ""
   },
   {
-    "id": "boilerplate.containers.HomePage.start_project.header",
+    "id": "boilerplate.containers.Dashboard.start_project.header",
     "defaultMessage": "Start your next react project in seconds",
     "message": "Beginnen Sie Ihr nächstes React Projekt in Sekunden"
   },
   {
-    "id": "boilerplate.containers.HomePage.start_project.message",
+    "id": "boilerplate.containers.Dashboard.start_project.message",
     "defaultMessage": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
     "message": "Ein skalierendes, offline-first Fundament mit der besten DX und einem Fokus auf Performance und bewährte Methoden"
   },
   {
-    "id": "boilerplate.containers.HomePage.tryme.atPrefix",
+    "id": "boilerplate.containers.Dashboard.tryme.atPrefix",
     "defaultMessage": "@",
     "message": ""
   },
   {
-    "id": "boilerplate.containers.HomePage.tryme.header",
+    "id": "boilerplate.containers.Dashboard.tryme.header",
     "defaultMessage": "Try me!",
     "message": "Probiere mich!"
   },
   {
-    "id": "boilerplate.containers.HomePage.tryme.message",
+    "id": "boilerplate.containers.Dashboard.tryme.message",
     "defaultMessage": "Show Github repositories by",
     "message": "Zeige die Github Repositories von"
   },
